# Deep-Researcher-Agent

./: LICENSE  README.md
ResoluteAI-backend/: .gitignore  pyproject.toml
ResoluteAI-backend/Agents/: analyzer.py  orchestrator.py  planner.py  reporter.py  researcher.py
ResoluteAI-backend/Configration/: config.py
ResoluteAI-backend/api/: main.py  routes.py
ResoluteAI-frontend/app/: package-lock.json  package.json
ResoluteAI-frontend/app/app/: globals.css  layout.tsx  page.tsx
ResoluteAI-frontend/app/app/components/: CenterChat.tsx  ChatInput.tsx  LeftSidebar.tsx  ProgressStage.tsx  ReportViewer.tsx  RightSidebar.tsx
ResoluteAI-frontend/app/lib/: storage.ts
